--- a/resources/fxml/bossLogIn.fxml
+++ b/resources/fxml/bossLogIn.fxml
@@ -8,8 +8,12 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
+<?import java.net.URL?>
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.projekat.BossLogInController">
-  <columnConstraints>
+    <stylesheets>
+        <URL value="@/css/style.css" />
+    </stylesheets>
+    <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="75.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -19,9 +23,9 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Broj licence" />
+      <Label text="Korisničko ime" />
       <Label text="Šifra" GridPane.rowIndex="1" />
-      <TextField fx:id="dossLicenceNumberTF" GridPane.columnIndex="1" />
+      <TextField fx:id="bossUsernameTF" GridPane.columnIndex="1" />
       <TextField fx:id="bossPasswordTF" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <GridPane GridPane.columnSpan="2" GridPane.rowIndex="2">
         <columnConstraints>
