--- a/resources/fxml/modDoctor.fxml
+++ b/resources/fxml/modDoctor.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -10,7 +11,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import java.net.URL?>
 <GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" vgap="5.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@/css/style.css" />
@@ -37,10 +37,10 @@
       <TextField fx:id="firstNameTF" GridPane.columnIndex="1" />
       <TextField fx:id="lastNameTF" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <TextField fx:id="licenceTF" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <ComboBox fx:id="departmentCB" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="180.0" GridPane.columnIndex="1" GridPane.rowIndex="2" editable="true"/>
+      <ComboBox fx:id="departmentCB" editable="true" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="180.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="4">
          <children>
-            <Button fx:id="addDoctorBtn" mnemonicParsing="false" onAction="#addDoctor" text="Registruj doktora" />
+            <Button fx:id="addDoctorBtn" mnemonicParsing="false" onAction="#addDoctor" prefHeight="31.0" prefWidth="100.0" text="Spasi" />
          </children>
       </HBox>
    </children>
