--- a/resources/fxml/generalPractitioner.fxml
+++ b/resources/fxml/generalPractitioner.fxml
@@ -70,12 +70,10 @@
                 <RowConstraints minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <TableView fx:id="doctorsTV" prefHeight="137.0" prefWidth="479.0" GridPane.rowIndex="1">
+                <TableView fx:id="checkUpsTV" prefHeight="137.0" prefWidth="479.0" GridPane.rowIndex="1">
                     <columns>
-                        <TableColumn fx:id="colDFirstName" prefWidth="120.0" text="Ime" />
-                        <TableColumn fx:id="colDLastName" prefWidth="120.0" text="Prezime" />
-                        <TableColumn fx:id="colSpetialization" prefWidth="120.0" text="Odjel" />
-                        <TableColumn fx:id="colLicenceNumber" prefWidth="120.0" text="Broj licence" />
+                        <TableColumn fx:id="colFirstName" prefWidth="120.0" text="Ime" />
+                        <TableColumn fx:id="colLastName" prefWidth="120.0" text="Prezime" />
                     </columns>
                 </TableView>
                 <TableView fx:id="patientsTV" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
@@ -86,7 +84,7 @@
                         <TableColumn fx:id="colMHNumber" prefWidth="120.0" text="Karton" />
                     </columns>
                 </TableView>
-                <Label prefHeight="21.0" prefWidth="68.0" text="Doktori">
+                <Label prefHeight="27.0" prefWidth="98.0" text="Pregledi">
                     <font>
                         <Font name="System Bold" size="18.0" />
                     </font>
@@ -120,9 +118,10 @@
                 <Insets bottom="20.0" right="20.0" top="20.0" />
             </padding>
             <children>
-                <Button fx:id="addDoctorBtn" mnemonicParsing="false" prefHeight="31.0" prefWidth="163.0" text="Dodaj doktora" />
-                <Button fx:id="updateDoctorBtn" mnemonicParsing="false" prefHeight="31.0" prefWidth="161.0" text="Ažuriraj doktora" GridPane.rowIndex="1" />
-                <Button fx:id="addPatientBtn" mnemonicParsing="false" prefHeight="31.0" prefWidth="160.0" text="Dodaj pacijenta" GridPane.rowIndex="2" />
+                <Button fx:id="addDoctorBtn" mnemonicParsing="false" prefHeight="31.0" prefWidth="163.0" text="Pregledaj" GridPane.rowIndex="1" />
+                <Button fx:id="updatePatientBtn" mnemonicParsing="false" prefHeight="31.0" prefWidth="161.0" text="Ažuriraj pacijenta" GridPane.rowIndex="3" />
+                <Button fx:id="addPatientBtn" mnemonicParsing="false" onAction="#addPatient" prefHeight="31.0" prefWidth="160.0" text="Dodaj pacijenta" GridPane.rowIndex="2" />
+            <Button fx:id="addCheckUpBtn" mnemonicParsing="false" onAction="#addCheckUp" prefHeight="31.0" prefWidth="180.0" text="Dodaj pregled" />
             </children>
         </GridPane>
     </right>
